; ModuleID = '/home/carl/AnghaBench/ccv/lib/nnc/cmd/convolution/cpu_opt/extr__ccv_nnc_conv_cpu_4x4_3x3_winograd.c__ccv_nnc_conv_forw_4x4_3x3_winograd_cpu_opt.c'
source_filename = "/home/carl/AnghaBench/ccv/lib/nnc/cmd/convolution/cpu_opt/extr__ccv_nnc_conv_cpu_4x4_3x3_winograd.c__ccv_nnc_conv_forw_4x4_3x3_winograd_cpu_opt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_12__ = type { %struct.TYPE_11__ }
%struct.TYPE_11__ = type { i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @_ccv_nnc_conv_forw_4x4_3x3_winograd_cpu_opt(i32* %0, %struct.TYPE_12__* %1, %struct.TYPE_12__* %2, i32 %3, i32* %4, i32* %5) #0 {
  %7 = alloca i32*, align 8
  %8 = alloca %struct.TYPE_12__*, align 8
  %9 = alloca %struct.TYPE_12__*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  store i32* %0, i32** %7, align 8
  store %struct.TYPE_12__* %1, %struct.TYPE_12__** %8, align 8
  store %struct.TYPE_12__* %2, %struct.TYPE_12__** %9, align 8
  store i32 %3, i32* %10, align 4
  store i32* %4, i32** %11, align 8
  store i32* %5, i32** %12, align 8
  %13 = load i32*, i32** %7, align 8
  %14 = load %struct.TYPE_12__*, %struct.TYPE_12__** %8, align 8
  %15 = load %struct.TYPE_12__*, %struct.TYPE_12__** %9, align 8
  %16 = load i32, i32* %10, align 4
  %17 = load i32*, i32** %11, align 8
  %18 = load i32*, i32** %12, align 8
  %19 = call i32 @_ccv_nnc_conv_forw_4x4_3x3_winograd_ref(i32* %13, %struct.TYPE_12__* %14, %struct.TYPE_12__* %15, i32 %16, i32* %17, i32* %18)
  ret i32 %19
}

declare dso_local i32 @_ccv_nnc_conv_forw_4x4_3x3_winograd_ref(i32*, %struct.TYPE_12__*, %struct.TYPE_12__*, i32, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
